  * uscan:
    + Let unzip convert text files to native line endings when repacking.
      Thanks to Daniel Kahn Gilmor for the suggestion.  (Closes: #618513)
    + Avoid "Use of uninitialized value" warning when URL doesn't have
      "/" after the host.  Thanks to Mats Erik Andersson for the patch.
      (Closes: #600909)
  * Remove use of lzma command in favor of xz. (Closes: #599641)
    + debian/control: Remove lzma from Recommends.
    + uscan: Use xz to repack lzma tarballs.
    + uupdate: Use xz to handle lzma-compressed files.

  [ Ron Lee ]
  * cowpoke: add a --return option that copies the build results back to a
    directory somewhere.  (Closes: #614268)

 -- James Vega <jamessan@debian.org>  Wed, 02 Mar 2011 00:07:34 -0500

devscripts (2.10.71) unstable; urgency=low

  [ Christoph Berg ]
  * debcommit (git): Don't treat "no files to commit" as an error when called
    with --release, otherwise it is not possible to tag after the final build.

  [ James Vega ]
  * bts:
    + Use Pod::Text to remove POD markup before displaying the help.  (Closes:
      #613502)
    + Document that whitespace is required around the dot/comma separating
      command stanzas.  (Closes: #595893)
  * dget: Ignore IO::File errors from local cache when a URL is given.
    The local cache should be used when accessible, but not prevent downloads
    when it isn't.  (Closes: #599354)
  * build-rdeps: Remove hard-coded path for grep-dctrl.
  * debchange:
    + Require an argument for the --allow-lower-version option.  (Closes:
      #597675)
    + Since the entry added by --closes requires editing anyway, require the
      user to save the changelog for it update the original changelog.

  [ Patrick Schoenfeld ]
  * build-rdeps: Update release_pattern for the new InRelease release files,
    which apt began downloading in newer versions instead of the Release file.
    (Closes: #613941) 

  [ Ron Lee ]
  * cowpoke: try to rsync source files to the build host.  (Closes: #610072)